fix(modal): fix buttons and inputs layouts on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -559,8 +559,15 @@ input {
 
 .pledge__header,
 .pledge__footer {
-  display: flex;
-  justify-content: space-between;
+  /* mixin mq */
+  /* end mixin mq */
+}
+@media screen and (min-width: 460px) {
+  .pledge__header,
+.pledge__footer {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .pledge__header {
@@ -589,9 +596,10 @@ input {
 
 .pledge__left {
   display: flex;
-  margin-top: auto;
-  margin-bottom: auto;
   align-items: center;
+  margin-bottom: 1rem;
+  /* mixin mq */
+  /* end mixin mq */
 }
 .pledge__left span {
   margin-right: 0.5rem;
@@ -599,6 +607,12 @@ input {
   font-size: 2rem;
   line-height: 2rem;
   color: black;
+}
+@media screen and (min-width: 460px) {
+  .pledge__left {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 }
 
 .pledge__select {
@@ -747,7 +761,14 @@ input {
   }
 }
 .pledge.checked .pledge__enter-container {
-  display: flex;
+  display: block;
+  /* mixin mq */
+  /* end mixin mq */
+}
+@media screen and (min-width: 460px) {
+  .pledge.checked .pledge__enter-container {
+    display: flex;
+  }
 }
 
 .pledge__enter__intro {
@@ -764,8 +785,14 @@ input {
 }
 
 .pledge__enter__input-button-container {
-  display: flex;
-  width: 100%;
+  /* mixin mq */
+  /* end mixin mq */
+}
+@media screen and (min-width: 460px) {
+  .pledge__enter__input-button-container {
+    display: flex;
+    width: 100%;
+  }
 }
 
 .pledge__enter__input-container {
@@ -789,12 +816,19 @@ input {
   width: 100%;
   padding: 1rem 1rem 1rem 2rem;
   text-align: right;
+  /* mixin mq */
+  /* end mixin mq */
 }
 .pledge__enter__input::-webkit-outer-spin-button, .pledge__enter__input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 .pledge__enter__input-button-container.error .pledge__enter__input {
   border: 2px solid var(--alert-color);
+}
+@media screen and (max-width: 459px) {
+  .pledge__enter__input {
+    margin-bottom: 1rem;
+  }
 }
 
 .pledge__enter__error {
@@ -841,6 +875,13 @@ input {
 .pledge__enter__button {
   /* mixin mq */
   /* end mixin mq */
+  /* mixin mq */
+  /* end mixin mq */
+}
+@media screen and (max-width: 459px) {
+  .pledge__enter__button {
+    width: 100%;
+  }
 }
 @media screen and (max-width: 749px) {
   .pledge__enter__button {
@@ -874,11 +915,17 @@ input {
 }
 
 .intro__buttons-container {
-  display: flex;
-  justify-content: space-between;
   margin-top: 1.4rem;
   /* mixin mq */
   /* end mixin mq */
+  /* mixin mq */
+  /* end mixin mq */
+}
+@media screen and (min-width: 460px) {
+  .intro__buttons-container {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 @media screen and (min-width: 650px) {
   .intro__buttons-container {
@@ -889,6 +936,13 @@ input {
 .intro__button--right {
   /* mixin mq */
   /* end mixin mq */
+  /* mixin mq */
+  /* end mixin mq */
+}
+@media screen and (max-width: 459px) {
+  .intro__button--right {
+    margin: 1rem auto 0 auto;
+  }
 }
 @media screen and (max-width: 649px) {
   .intro__button--right {
